docs: update reconciliation plan and add BENCHMARKS
RECONCILIATION-PLAN.md: rewritten to reflect current repo state
- Renamed demos (01-three-signals, 02-cardinality, 03-tail-sampling)
- Demo 05 phase covers full 8-way comparison + Quarkus
- New fallbacks: Quarkus AOT cache mem_limit, Spring Boot 4 SDK gap
- Time targets for 35-min talk
- Identifies dress rehearsal as the critical-path remaining task

BENCHMARKS.md: canonical record of measured numbers
- Full Demo 05 cold-start matrix (Spring Boot 4 + Quarkus 3.33)
- Methodology notes (log-line parsing, JVM build ID matching)
- Demo 04 placeholders for dress-rehearsal capture
- Hardware sensitivity caveats and update triggers